fix links page alignment

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ html {
     top: 0;
     background-color: rgba(40, 40, 40, 0.95);
     color: #fafafa;
-    padding: 1rem;
+    padding: 0.75rem 1rem;
 }
 
 #nav-bar a {
@@ -98,7 +98,7 @@ html {
 }
 
 .section {
-    padding: 1rem 10%;
+    padding: 2rem 10%;
 }
 
 #home-section {
